--- a/index2.html
+++ b/index2.html
@@ -183,12 +183,11 @@
             <div>
                 <a href="#" class="logo">CF Blog</a>
                 <nav class="nav-links">
-                    <a href="#">CF-Blog相关</a>
-                    <a href="#">我的作品</a>
+                    <a href="#">记录生活</a>
+                    <a href="https://weishuai168.github.io/">我的文章</a>
                     <a href="#">GitHub</a>
                 </nav>
             </div>
-            <a href="#" class="login">登录</a>
         </div>
     </header>
 
@@ -198,12 +197,12 @@
         <section class="article-list">
             <article class="article-item">
                 <div class="article-header">
-                    <img src="https://picsum.photos/200/150?random=1" alt="文章缩略图" class="article-img">
+                    <img src="https://i.imgs.ovh/2025/11/14/Caeocn.md.png" alt="文章缩略图" class="article-img">
                     <div>
-                        <h2 class="article-title"><a href="#">新增两个新主题-一个极简风格,一个价值499</a></h2>
-                        <p class="article-desc">使用了新的模板引擎mustache后,主题开发真的很简单,练习了两个新主题 本博客程序的主题开发,已经简单到极致了...</p>
+                        <h2 class="article-title"><a href="https://weishuai168.github.io/post/202511/1114.html">在一支股票上反复做T，把成本降到负值</a></h2>
+                        <p class="article-desc">今天早上将昨天尾盘低吸的邮储银行5.86抛掉一半，目前持有邮储5000股下周如有低吸的机会还要继续加仓...</p>
                         <div class="article-meta">
-                            <span>2021-01-04</span>
+                            <span>2025-11-14</span>
                             <span>875</span>
                         </div>
                     </div>
