--- a/index2.html
+++ b/index2.html
@@ -213,11 +213,11 @@
                 <div class="article-header">
                     <img src="https://picsum.photos/200/150?random=2" alt="文章缩略图" class="article-img">
                     <div>
-                        <h2 class="article-title"><a href="#">CF-Blog主题开发文档-史上最简单博客主题开发</a></h2>
-                        <p class="article-desc">由于今天的版本更新,改用模板引擎mustache,主题开发变得非常简单,主题文件只有2个 本博客程序,主题开发只需要两个文件...</p>
+                        <h2 class="article-title"><a href="https://weishuai168.github.io/post/shiyiyue.html">沪深 300ETF 分红之后卖出通常不需要额外扣分红税</a></h2>
+                        <p class="article-desc">因为 ETF 基金持有的成分股在分红时，已由上市公司代扣代缴个人所得税。投资者从基金分配中取得的收入...</p>
                         <div class="article-meta">
-                            <span>2021-01-03</span>
-                            <span>5517</span>
+                            <span>2025-11-13</span>
+                            <span>7</span>
                         </div>
                     </div>
                 </div>
@@ -227,11 +227,11 @@
                 <div class="article-header">
                     <img src="https://picsum.photos/200/150?random=3" alt="文章缩略图" class="article-img">
                     <div>
-                        <h2 class="article-title"><a href="#">CF-Blog简单两步,设置代码高亮</a></h2>
-                        <p class="article-desc">简单两步设置代码高亮 同样适用于其他系统 对于cfblog而言,只需要设置两个参数即可,是不是很便捷先来一个效果...</p>
+                        <h2 class="article-title"><a href="https://weishuai168.github.io/post/pQWS5gYDH/">15秒就能【“克隆”任何人】的声音！而且永久免费</a></h2>
+                        <p class="article-desc">顶级中文AI语音技术！如何克隆自己的声音？如何克隆别人的声音？免安装克隆声音 关键还是免费的...</p>
                         <div class="article-meta">
-                            <span>2020-12-22</span>
-                            <span>5938</span>
+                            <span>2024-08-01</span>
+                            <span>8</span>
                         </div>
                     </div>
                 </div>
