--- a/index2.html
+++ b/index2.html
@@ -181,7 +181,7 @@
     <header class="header">
         <div class="nav-container">
             <div>
-                <a href="#" class="logo">CF Blog</a>
+                <a href="#" class="logo">老魏博客</a>
                 <nav class="nav-links">
                     <a href="#">记录生活</a>
                     <a href="https://weishuai168.github.io/">我的文章</a>
