--- a/index2.html
+++ b/index2.html
@@ -236,7 +236,21 @@
                     </div>
                 </div>
             </article>
-
+            
+            <article class="article-item">
+                <div class="article-header">
+                    <img src="https://weishuai168.github.io/post-images/ae_OX6kJE.jpg" alt="文章缩略图" class="article-img">
+                    <div>
+                        <h2 class="article-title"><a href="https://weishuai168.github.io/post/ae_OX6kJE/">为什么大多数股票会跟着大盘同涨同跌，都是一个庄家操纵的吗</a></h2>
+                        <p class="article-desc">大多数股票跟着大盘同涨同跌的现象被称为“市场趋势”或“市场情绪”。这是因为市场中的投资者和交易者往往会受到相同的信息和情绪的影响...</p>
+                        <div class="article-meta">
+                            <span>2024-07-28</span>
+                            <span>8</span>
+                        </div>
+                    </div>
+                </div>
+            </article>
+            
             <!-- 分页 -->
             <div class="pagination">
                 <a href="#">下一页 ></a>
