--- a/index2.html
+++ b/index2.html
@@ -249,11 +249,24 @@
                         </div>
                     </div>
                 </div>
+            </article
+                
+            <article class="article-item">
+                <div class="article-header">
+                    <img src="https://weishuai168.github.io/post-images/wlzRi0CzP.jpg" alt="文章缩略图" class="article-img">
+                    <div>
+                        <h2 class="article-title"><a href="https://weishuai168.github.io/post/wlzRi0CzP/">一份价值600的影视解说教程</a></h2>
+                        <p class="article-desc">下载方法风行不限制资源的下载方式，这里提供3种参考方法1、通用网址（所有小程序的影视都可以在这个网址搜索）...</p>
+                        <div class="article-meta">
+                            <span>2024-07-02</span>
+                            <span>8</span>
+                        </div>
+                    </div>
+                </div>
             </article>
-            
             <!-- 分页 -->
             <div class="pagination">
-                <a href="#">下一页 ></a>
+                <a href="https://weishuai168.github.io/page/2/">下一页 ></a>
             </div>
         </section>
 
@@ -263,8 +276,8 @@
             <div class="sidebar-widget">
                 <h3 class="widget-title">分类目录</h3>
                 <ul class="category-list">
-                    <li><a href="#">CF-Blog相关</a></li>
-                    <li><a href="#">我的作品</a></li>
+                    <li><a href="#">老魏相关</a></li>
+                    <li><a href="#">老魏博客</a></li>
                     <li><a href="#">其他分享</a></li>
                 </ul>
             </div>
@@ -273,26 +286,25 @@
             <div class="sidebar-widget">
                 <h3 class="widget-title">标签</h3>
                 <ul class="tag-list">
-                    <li><a href="#">cf-blog</a></li>
-                    <li><a href="#">更新日志</a></li>
-                    <li><a href="#">剪切板</a></li>
-                    <li><a href="#">同步</a></li>
-                    <li><a href="#">电脑</a></li>
+                    <li><a href="#">老魏-blog</a></li>
+                    <li><a href="#">炒股教程</a></li>
+                    <li><a href="#">炒股战法</a></li>
+                    <li><a href="#">量化学习</a></li>
+                    <li><a href="#">电脑软件</a></li>
                     <li><a href="#">手机</a></li>
-                    <li><a href="#">宝塔</a></li>
-                    <li><a href="#">备份</a></li>
-                    <li><a href="#">谷歌词盘</a></li>
+                    <li><a href="#">自媒体</a></li>
+                    <li><a href="#">分享方法</a></li>
+                    <li><a href="#">建站教程</a></li>
                     <li><a href="#">抖音</a></li>
                 </ul>
             </div>
 
             <!-- 链接 -->
             <div class="sidebar-widget">
-                <h3 class="widget-title">链接</h3>
+                <h3 class="widget-title">友情链接</h3>
                 <ul class="link-list">
-                    <li><a href="#">SiteMap</a></li>
-                    <li><a href="#">关于我</a></li>
-                    <li><a href="#">GitHub</a></li>
+                    <li><a href="#">老魏博客</a></li>
+                    <li><a href="/">关于我</a></li>
                 </ul>
             </div>
         </aside>
