--- a/index2.html
+++ b/index2.html
@@ -181,7 +181,7 @@
     <header class="header">
         <div class="nav-container">
             <div>
-                <a href="#" class="logo">老魏博客</a>
+                <a href="https://weishuai168.github.io/" class="logo">老魏博客</a>
                 <nav class="nav-links">
                     <a href="#">记录生活</a>
                     <a href="https://weishuai168.github.io/">我的文章</a>
@@ -249,7 +249,7 @@
                         </div>
                     </div>
                 </div>
-            </article
+            </article>
                 
             <article class="article-item">
                 <div class="article-header">
