--- a/index2.html
+++ b/index2.html
@@ -197,10 +197,10 @@
         <section class="article-list">
             <article class="article-item">
                 <div class="article-header">
-                    <img src="https://i.imgs.ovh/2025/11/14/Caeocn.md.png" alt="文章缩略图" class="article-img">
+                    <img src="https://weishuai168.github.io/post-images/bB2oAzCFI.jpg" alt="文章缩略图" class="article-img">
                     <div>
-                        <h2 class="article-title"><a href="https://weishuai168.github.io/post/202511/1114.html">在一支股票上反复做T，把成本降到负值</a></h2>
-                        <p class="article-desc">今天早上将昨天尾盘低吸的邮储银行5.86抛掉一半，目前持有邮储5000股下周如有低吸的机会还要继续加仓...</p>
+                        <h2 class="article-title"><a href="https://weishuai168.github.io/post/202511/1114.html">一款可以抽取MKV视频字幕/音频的软件</a></h2>
+                        <p class="article-desc">下载国外生肉的时候没有中文字幕，而且大多数都是mkv格式的，这时候就要用到这款软件了...</p>
                         <div class="article-meta">
                             <span>2025-11-14</span>
                             <span>875</span>
@@ -266,6 +266,7 @@
             </article>
             <!-- 分页 -->
             <div class="pagination">
+               <a href="https://weishuai168.github.io/">上一页 ></a> 
                 <a href="https://weishuai168.github.io/page/2/">下一页 ></a>
             </div>
         </section>
