--- a/index2.html
+++ b/index2.html
@@ -202,7 +202,7 @@
                         <h2 class="article-title"><a href="https://weishuai168.github.io/post/202511/1114.html">一款可以抽取MKV视频字幕/音频的软件</a></h2>
                         <p class="article-desc">下载国外生肉的时候没有中文字幕，而且大多数都是mkv格式的，这时候就要用到这款软件了...</p>
                         <div class="article-meta">
-                            <span>2025-11-14</span>
+                            <span>2024-07-01</span>
                             <span>875</span>
                         </div>
                     </div>
@@ -213,10 +213,10 @@
                 <div class="article-header">
                     <img src="https://picsum.photos/200/150?random=2" alt="文章缩略图" class="article-img">
                     <div>
-                        <h2 class="article-title"><a href="https://weishuai168.github.io/post/shiyiyue.html">沪深 300ETF 分红之后卖出通常不需要额外扣分红税</a></h2>
-                        <p class="article-desc">因为 ETF 基金持有的成分股在分红时，已由上市公司代扣代缴个人所得税。投资者从基金分配中取得的收入...</p>
+                        <h2 class="article-title"><a href="https://weishuai168.github.io/post/xkIThWjlb/">帝国cms伪静态规则</a></h2>
+                        <p class="article-desc">ewrite ([.])/listinfo-([0-9]+)-([0-9]+).html$ $1/e/action/ListInfo/index.php?classid=$2&page=...</p>
                         <div class="article-meta">
-                            <span>2025-11-13</span>
+                            <span>2024-07-01</span>
                             <span>7</span>
                         </div>
                     </div>
