--- a/index2.html
+++ b/index2.html
@@ -227,11 +227,11 @@
                 <div class="article-header">
                     <img src="https://picsum.photos/200/150?random=3" alt="文章缩略图" class="article-img">
                     <div>
-                        <h2 class="article-title"><a href="https://weishuai168.github.io/post/pQWS5gYDH/">15秒就能【“克隆”任何人】的声音！而且永久免费</a></h2>
-                        <p class="article-desc">顶级中文AI语音技术！如何克隆自己的声音？如何克隆别人的声音？免安装克隆声音 关键还是免费的...</p>
+                        <h2 class="article-title"><a href="https://weishuai168.github.io/post/hcvuXLSx9/">[解决]Parallels Desktop Windows虚拟机的快捷方式在Mac桌面上显示</a></h2>
+                        <p class="article-desc">文件夹路径为：第一步：打开C：\用户\公用\公用桌面，第二步：点击左上角查看，显示隐藏内容...</p>
                         <div class="article-meta">
-                            <span>2024-08-01</span>
-                            <span>8</span>
+                            <span>2024-07-01</span>
+                            <span>9</span>
                         </div>
                     </div>
                 </div>
@@ -239,12 +239,12 @@
             
             <article class="article-item">
                 <div class="article-header">
-                    <img src="https://weishuai168.github.io/post-images/ae_OX6kJE.jpg" alt="文章缩略图" class="article-img">
+                    <img src="https://weishuai168.github.io/post-images/h39G06Dnf.png" alt="文章缩略图" class="article-img">
                     <div>
-                        <h2 class="article-title"><a href="https://weishuai168.github.io/post/ae_OX6kJE/">为什么大多数股票会跟着大盘同涨同跌，都是一个庄家操纵的吗</a></h2>
-                        <p class="article-desc">大多数股票跟着大盘同涨同跌的现象被称为“市场趋势”或“市场情绪”。这是因为市场中的投资者和交易者往往会受到相同的信息和情绪的影响...</p>
+                        <h2 class="article-title"><a href="https://weishuai168.github.io/post/h39G06Dnf/">给电脑做系统重启时提示无效分区，哪里出问题了</a></h2>
+                        <p class="article-desc">分区表损坏：硬盘的分区表可能被损坏或丢失，导致系统无法识别有效的分区。引导扇区损坏：硬盘的主引导记录（MBR）...</p>
                         <div class="article-meta">
-                            <span>2024-07-28</span>
+                            <span>2024-07-01</span>
                             <span>8</span>
                         </div>
                     </div>
@@ -255,11 +255,11 @@
                 <div class="article-header">
                     <img src="https://weishuai168.github.io/post-images/wlzRi0CzP.jpg" alt="文章缩略图" class="article-img">
                     <div>
-                        <h2 class="article-title"><a href="https://weishuai168.github.io/post/wlzRi0CzP/">一份价值600的影视解说教程</a></h2>
-                        <p class="article-desc">下载方法风行不限制资源的下载方式，这里提供3种参考方法1、通用网址（所有小程序的影视都可以在这个网址搜索）...</p>
+                        <h2 class="article-title"><a href="https://weishuai168.github.io/post/wlzRi0CzP/">现在的AI太智能了，一篇作文30秒搞定</a></h2>
+                        <p class="article-desc">女儿八年级语文期末考试要求：以穿梭为题写一篇600字左右的作文，作文题目自拟，如穿梭在知识的海洋里...</p>
                         <div class="article-meta">
                             <span>2024-07-02</span>
-                            <span>8</span>
+                            <span>11</span>
                         </div>
                     </div>
                 </div>
