--- a/index2.html
+++ b/index2.html
@@ -253,7 +253,7 @@
                 
             <article class="article-item">
                 <div class="article-header">
-                    <img src="https://weishuai168.github.io/post-images/wlzRi0CzP.jpg" alt="文章缩略图" class="article-img">
+                    <img src="https://weishuai168.github.io/post-images/GeheXCRkZ.png" alt="文章缩略图" class="article-img">
                     <div>
                         <h2 class="article-title"><a href="https://weishuai168.github.io/post/wlzRi0CzP/">现在的AI太智能了，一篇作文30秒搞定</a></h2>
                         <p class="article-desc">女儿八年级语文期末考试要求：以穿梭为题写一篇600字左右的作文，作文题目自拟，如穿梭在知识的海洋里...</p>
