--- a/index3.html
+++ b/index3.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CF-Blog主题开发文档-史上最简单博客主题开发</title>
+    <title>老魏博客</title>
     <style>
         * {
             margin: 0;
@@ -276,10 +276,10 @@
     <header class="header">
         <div class="nav-container">
             <div>
-                <a href="#" class="logo">CF Blog</a>
+                <a href="https://weishuai168.github.io/" class="logo">老魏博客</a>
                 <nav class="nav-links">
-                    <a href="#">CF-Blog相关</a>
-                    <a href="#">我的作品</a>
+                    <a href="#">记录生活</a>
+                    <a href="https://weishuai168.github.io/">我的文章</a>
                     <a href="#">GitHub</a>
                 </nav>
             </div>
@@ -396,10 +396,10 @@
         <aside class="sidebar">
             <!-- 分类目录 -->
             <div class="sidebar-widget">
-                <h3 class="widget-title">分类目录</h3>
+               <h3 class="widget-title">分类目录</h3>
                 <ul class="category-list">
-                    <li><a href="#">CF-Blog相关</a></li>
-                    <li><a href="#">我的作品</a></li>
+                    <li><a href="#">老魏相关</a></li>
+                    <li><a href="#">老魏博客</a></li>
                     <li><a href="#">其他分享</a></li>
                 </ul>
             </div>
@@ -408,26 +408,25 @@
             <div class="sidebar-widget">
                 <h3 class="widget-title">标签</h3>
                 <ul class="tag-list">
-                    <li><a href="#">cf-blog</a></li>
-                    <li><a href="#">更新日志</a></li>
-                    <li><a href="#">剪切板</a></li>
-                    <li><a href="#">同步</a></li>
-                    <li><a href="#">电脑</a></li>
+                    <li><a href="#">老魏-blog</a></li>
+                    <li><a href="#">炒股教程</a></li>
+                    <li><a href="#">炒股战法</a></li>
+                    <li><a href="#">量化学习</a></li>
+                    <li><a href="#">电脑软件</a></li>
                     <li><a href="#">手机</a></li>
-                    <li><a href="#">宝塔</a></li>
-                    <li><a href="#">备份</a></li>
-                    <li><a href="#">谷歌词盘</a></li>
+                    <li><a href="#">自媒体</a></li>
+                    <li><a href="#">分享方法</a></li>
+                    <li><a href="#">建站教程</a></li>
                     <li><a href="#">抖音</a></li>
                 </ul>
             </div>
 
             <!-- 链接 -->
             <div class="sidebar-widget">
-                <h3 class="widget-title">链接</h3>
+                <h3 class="widget-title">友情链接</h3>
                 <ul class="link-list">
-                    <li><a href="#">SiteMap</a></li>
-                    <li><a href="#">关于我</a></li>
-                    <li><a href="#">GitHub</a></li>
+                    <li><a href="#">老魏博客</a></li>
+                    <li><a href="/">关于我</a></li>
                 </ul>
             </div>
         </aside>
