--- a/index.html
+++ b/index.html
@@ -197,6 +197,19 @@
         <section class="article-list">
             <article class="article-item">
                 <div class="article-header">
+                    <img src="https://weishuai168.github.io/post-images/ae_OX6kJE.jpg" alt="文章缩略图" class="article-img">
+                    <div>
+                        <h2 class="article-title"><a href="https://weishuai168.github.io/post/202511/1118.html">今日大跌继续加仓邮储银行</a></h2>
+                        <p class="article-desc">今日大盘下跌，银行板块没有护盘继续下跌，继续加仓6000股，明日继续做T赚差价，坚持个两年就能把成本降到负值...</p>
+                        <div class="article-meta">
+                            <span>2025-11-18</span>
+                            <span>5</span>
+                        </div>
+                    </div>
+                </div>
+            </article>
+            <article class="article-item">
+                <div class="article-header">
                     <img src="https://i.imgs.ovh/2025/11/14/Caeocn.md.png" alt="文章缩略图" class="article-img">
                     <div>
                         <h2 class="article-title"><a href="https://weishuai168.github.io/post/202511/1114.html">在一支股票上反复做T，把成本降到负值</a></h2>
@@ -311,3 +324,4 @@
     </main>
 </body>
 </html>
+
